homelab/mealie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  labels:
    app: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mealie
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      tolerations:
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 30
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 30
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:latest@sha256:ba24b88462380fb59a6c7d04c6d9e607e0b6b04e31306592181186bcdab1952b
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9000
          volumeMounts:
            - name: data
              mountPath: /app/data

          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi

          startupProbe:
            httpGet:
              path: /api/app/about
              port: http
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/app/about
              port: http
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/app/about
              port: http
            periodSeconds: 10
            failureThreshold: 3

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mealie-data-local
